fixed elements shifting bug

--- a/3-column-preview-card-component-main/styles.scss
+++ b/3-column-preview-card-component-main/styles.scss
@@ -52,13 +52,14 @@ body {
     border-radius: 50px;
     padding: 1rem 0.625rem;
     width: 70%;
-    transition: 0.3s ease-in-out; //look up
+    transition: 0.3s ease-in-out;
+    border: $transparent-white 2px solid;
 
     &:hover {
       cursor: pointer;
       background-color: transparent;
       color: $transparent-white;
-      border: $transparent-white 2px solid; //look up
+      border: $transparent-white 2px solid;
     }
   }
 
